2008-08-17  Philip Withnall  <philip@tecnocode.co.uk>

	* src/compiler.c:
	* src/instructions.h: Renamed the "END" instruction "HALT".
	* data/mcus.ui:
	* src/Makefile.am:
	* src/analogue-input.c:
	* src/analogue-input.h:
	* src/input-port.c:
	* src/input-port.h:
	* src/interface.c:
	* src/interface.h:
	* src/main-window.c:
	* src/main.h:
	* src/simulation.c: Lots of refactoring of the simulation code as
	regards the interface. Added more input and output devices, and hooked
	them all up. Refactored error dialogues to use API more correctly.

2008-06-15  Philip Withnall  <philip@tecnocode.co.uk>

	* src/compiler.c:
	* src/instructions.h: Added context-sensitive help to error messages
	about operands of the wrong type.
	* data/mcus.ui:
	* src/Makefile.am:
	* src/interface.c:
	* src/simulation.c:
	* src/widgets/led.c:
	* src/widgets/led.h:
	* src/widgets/seven-segment-display.c:
	* src/widgets/seven-segment-display.h: Added LED and SSD widgets, and
	started to use them to visualise the output port in various ways.
	Also added the beginnings of support for visually setting the input
	port value in a similar manner.

2008-05-30  Philip Withnall  <philip@tecnocode.co.uk>

	* data/ocr-assembly.lang: Fixed a bug in highlighting labels.
	* src/main.c: Ensured that all saved files have the ".asm" extension
	for Windows compatibility.
	* src/Makefile.am:
	* src/instructions.h:
	* src/main-window.c:
	* src/simulation.c:
	* src/simulation.h:
	* src/compiler.c:
	* src/compiler.h: Renamed a few files, variables and structures in the
	parser and compiler to make it more correct. Added some comments
	detailing the language format in EBNF.

2008-05-26  Philip Withnall  <philip@tecnocode.co.uk>

	* .bzrignore:
	* configure.ac:
	* src/Makefile.am:
	* src/main-window.c:
	* src/parser.c: Add support for compiling for Windows.

2008-05-24  Philip Withnall  <philip@tecnocode.co.uk>

	* src/main-window.c:
	* src/main.c:
	* src/parser.c: