@@ -1195,6 +1195,7 @@
 														<property name="text">00</property>
 														<property name="max-length">2</property>
 														<property name="width-chars">2</property>
+														<signal name="changed" handler="mw_input_entry_changed"/>
 													</object>
 													<packing>
 														<property name="top-attach">0</property>
